@@ -352,13 +352,34 @@
       <a name="FRAME-FOCUS-POLICY"></a><a href="#FRAME-MENU">Frame-Focus-Policy</a>
     </h3>
     <p>
-      c: Set a click focus policy for the current frame.
+      -=- For the current frame -=-
     </p>
     <p>
-      s: Set a sloppy focus policy for the current frame.
+      a: Set a click focus policy for the current frame.
     </p>
     <p>
-      t: Set a (strict) sloppy focus policy only for windows in the current frame.
+      b: Set a sloppy focus policy for the current frame.
+    </p>
+    <p>
+      c: Set a (strict) sloppy focus policy only for windows in the current frame.
+    </p>
+    <p>
+      d: Set a sloppy select policy for the current frame.
+    </p>
+    <p>
+      -=- For all frames -=-
+    </p>
+    <p>
+      e: Set a click focus policy for all frames.
+    </p>
+    <p>
+      f: Set a sloppy focus policy for all frames.
+    </p>
+    <p>
+      g: Set a (strict) sloppy focus policy for all frames.
+    </p>
+    <p>
+      h: Set a sloppy select policy for all frames.
     </p>
     <hr>
     <h3>
