@@ -124,9 +124,16 @@ d: Resize down the current frame
 a: Resize down the current frame to its minimal size
 
 Frame-Focus-Policy
-c: Set a click focus policy for the current frame.
-s: Set a sloppy focus policy for the current frame.
-t: Set a (strict) sloppy focus policy only for windows in the current frame.
+-=- For the current frame -=-
+a: Set a click focus policy for the current frame.
+b: Set a sloppy focus policy for the current frame.
+c: Set a (strict) sloppy focus policy only for windows in the current frame.
+d: Set a sloppy select policy for the current frame.
+-=- For all frames -=-
+e: Set a click focus policy for all frames.
+f: Set a sloppy focus policy for all frames.
+g: Set a (strict) sloppy focus policy for all frames.
+h: Set a sloppy select policy for all frames.
 
 Frame-Managed-Window-Menu
 m: Change window types to be managed by a frame
