@@ -121,17 +121,24 @@
 
 (defun handle-enter-notify  (&rest event-slots &key window root-x root-y &allow-other-keys)
   (declare (ignore event-slots))
-  (case (if (frame-p *current-child*)
-	    (frame-focus-policy *current-child*)
-	    *default-focus-policy*)
-    (:sloppy (unless (and (> root-x (- (xlib:screen-width *screen*) 3))
-			  (> root-y (- (xlib:screen-height *screen*) 3)))
-	       (focus-window window)))
-    (:sloppy-strict (unless (and (> root-x (- (xlib:screen-width *screen*) 3))
-				 (> root-y (- (xlib:screen-height *screen*) 3)))
-		      (when (and (frame-p *current-child*)
+  (unless (and (> root-x (- (xlib:screen-width *screen*) 3))
+	       (> root-y (- (xlib:screen-height *screen*) 3)))
+    (case (if (frame-p *current-child*)
+	      (frame-focus-policy *current-child*)
+	      *default-focus-policy*)
+      (:sloppy (focus-window window))
+      (:sloppy-strict (when (and (frame-p *current-child*)
 				 (member window (frame-child *current-child*)))
-			(focus-window window))))))
+			(focus-window window)))
+      (:sloppy-select (let* ((child (find-child-under-mouse root-x root-y))
+			     (parent (find-parent-frame child)))
+			(unless (or (equal child *current-root*)
+				    (equal (typecase child
+				    	     (xlib:window parent)
+					     (t child))
+					   *current-child*))
+			    (focus-all-children child parent)
+			    (show-all-children)))))))
 
 
 
